added price i show-wishlist.html

--- a/src/main/resources/templates/show-wishlist.html
+++ b/src/main/resources/templates/show-wishlist.html
@@ -15,6 +15,7 @@
 <ul>
     <li th:each="wish : ${userWishlistDTO.wishes}">
         <span th:text="${wish.wish_name}">Wish name</span>:
+        <span th:text="${wish.price} 'DKK " >Price</span>
         <span th:text="${wish.description}">Description</span>
     </li>
 </ul>
