--- a/src/main/resources/templates/loginpage.html
+++ b/src/main/resources/templates/loginpage.html
@@ -6,15 +6,15 @@
     <link th:href="@{/main.css}" rel="stylesheet">
 </head>
 <body>
-<form action="/login" method="get">
+<form th:action="@{/login}" method="get">
     <label for="userId">Vælg bruger:</label>
-    <select name="userId" id="userId">
+    <select name="userId" id="userId" required>
         <!-- Iterer over brugere -->
         <option th:each="user : ${users}" th:value="${user.user_id}" th:text="${user.name}"></option>
     </select>
 
     <label for="role">Vælg rolle:</label>
-    <select name="role" id="role">
+    <select name="role" id="role" required>
         <!-- Iterér over roller -->
         <option th:each="role : ${roles}" th:value="${role.role_id}" th:text="${role.role_name}"></option>
     </select>
