--- a/src/main/resources/templates/show-wishlist.html
+++ b/src/main/resources/templates/show-wishlist.html
@@ -17,17 +17,16 @@
         <span th:text="${wish.wish_name}">Wish name</span>:
         <span th:text="${wish.description}">Description</span>
         <span th:text="${wish.price}">price</span>
-    </li>
-    <p>Tags:</p>
-    <div th:each="wishtagDTO : ${userWishlistDTO.wishes}">
-        <div th:each="tag : ${wishtagDTO.tagIds}">
+        <p>Tags:</p>
+        <div th:each="tag : ${wish.tagIds}">
             <div th:each="avaliabletag : ${avaliableTags}">
                 <div th:if="${tag == avaliabletag.tag_id}">
                     <p><span th:text="${avaliabletag.tag_name}"></span></p>
                 </div>
             </div>
         </div>
-    </div>
+    </li>
+
 </ul>
 </body>
 </html>
