--- a/src/main/resources/templates/show-wishlist.html
+++ b/src/main/resources/templates/show-wishlist.html
@@ -25,6 +25,12 @@
                 </div>
             </div>
         </div>
+        <p>Opret bruger:</p>
+        <td> <!--Modificer action endpoint-->
+            <form th:action="@{/delete (id=${touristattraction.tourist_id})}" method="post">
+                <button type="submit">Delete</button>
+            </form>
+        </td>
     </li>
 
 </ul>
