--- a/src/main/resources/templates/show-wishlist.html
+++ b/src/main/resources/templates/show-wishlist.html
@@ -17,6 +17,8 @@
         <span th:text="${wish.wish_name}">Wish name</span>:
         <span th:text="${wish.description}">Description</span>
         <span th:text="${wish.price}">price</span>
+        <span th:href="${wish.wish_id}/delete" class="btn"> Slet </span>
+
         <p>Tags:</p>
         <div th:each="tag : ${wish.tagIds}">
             <div th:each="avaliabletag : ${avaliableTags}">
