færdig med delete-wish.html og tilhørende metoder i repository
Mindre refactor-fikses.

--- a/src/main/resources/templates/show-wishlist.html
+++ b/src/main/resources/templates/show-wishlist.html
@@ -17,7 +17,7 @@
         <span th:text="${wish.wish_name}">Wish name</span>:
         <span th:text="${wish.description}">Description</span>
         <span th:text="${wish.price}">price</span>
-        <span th:href="${wish.wish_id}/delete" class="btn"> Slet </span>
+        <a th:href="${wish.wish_id}/delete" class="btn"> Slet </a>
 
         <p>Tags:</p>
         <div th:each="tag : ${wish.tagIds}">
