Tilføjet CSS til delete-wish.html

--- a/src/main/resources/templates/delete-wish.html
+++ b/src/main/resources/templates/delete-wish.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Attraction Deleted</title>
-  <link rel="stylesheet" th:href="@{/stylesheet.css}">
+  <link rel="stylesheet" href="stylesheet.css">
+  <link th:href="@{/main.css}" rel="stylesheet">
+  <title>Wishlist</title>
 </head>
 <body>
 <h1>Are you sure you want to delete this wish?</h1>
