--- a/src/main/resources/templates/show-wishlist.html
+++ b/src/main/resources/templates/show-wishlist.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
           <form th:action="@{'/' + ${wish.wish_id} + '/delete'}" method="post" style="display:inline;">
-            <button type="submit" class="btn">Slet ønske</button>
+            <button type="submit" class="btn">Delete wish</button>
         </form>
 
         </li>
