--- a/src/main/resources/templates/delete-wish.html
+++ b/src/main/resources/templates/delete-wish.html
@@ -12,6 +12,9 @@
   <input type="hidden" name="wishTagDTOId" th:value="${wishTagDTOId}">
   <button type="submit" class="btn">Delete</button>
 </form>
-<a th:href="@{/delete-wish.html}" class="btn">Back</a>
+<form th:action="@{/}" method="get" style="display:inline;">
+  <button type="submit" class="btn2">Back</button>
+</form>
+
 </body>
 </html>
