--- a/src/main/resources/templates/show-wishlist.html
+++ b/src/main/resources/templates/show-wishlist.html
@@ -30,7 +30,7 @@
             <form th:action="@{'/' + ${wish.wish_id} + '/show'}" method="post" style="display:inline;">
                 <button type="submit">Show wish</button>
             </form>
-          <form th:action="@{'/' + ${wish.wish_id} + '/delete'}" method="post" style="display:inline;">
+          <form th:action="@{'/' + ${wish.wish_id} + '/delete'}" method="get" style="display:inline;">
             <button type="submit" class="btn">Delete wish</button>
         </form>
 
