--- a/src/main/resources/templates/delete-wish.html
+++ b/src/main/resources/templates/delete-wish.html
@@ -12,7 +12,9 @@
   <input type="hidden" name="wishTagDTOId" th:value="${wishTagDTOId}">
   <button type="submit" class="btn">Delete</button>
 </form>
-<form th:action="@{/}" method="get" style="display:inline;">
+<form th:action="@{/showallwishes}" method="get" style="display:inline;">
+  <input type="hidden" name="userId" th:value="${userWishlistDTO.getUser_id()}"/>
+  <input type="hidden" name="role" th:value="${userWishlistDTO.getRole_id()}"/>
   <button type="submit" class="btn2">Back</button>
 </form>
 
