--- a/src/main/resources/templates/show-wishlist.html
+++ b/src/main/resources/templates/show-wishlist.html
@@ -24,7 +24,7 @@
                 <button type="submit" class="btn">Delete wish</button>
             </form>
             <form th:action="@{'/' + ${wish.wish_id} + '/edit'}" method="get" style="display:inline;">
-                <button type="submit" class="btn"> Edit wish</button>
+                <button type="submit" class="btn-edit"> Edit wish</button>
             </form>
         </li>
     </ul>
