--- a/src/main/resources/templates/delete-user.html
+++ b/src/main/resources/templates/delete-user.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Are you sure you want to delete this user</h1>
-<form th:action="@{/deleteuserconfirmation}" method="get">
+<form th:action="@{/deleteuserconfirmation}" method="post">
   <input type="hidden" name="userId" th:value="${userId}">
   <button type="submit" class="btn">Delete</button>
 </form>
