--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>An Error Occured in the Backend System!</h1>
+<h4>Contact the administrator on AMZDstud.kea.dk</h4><p><span th:text="${message}"></span></p></h4></body>
 <p><span th:text="${message}"></span></p>
+
 </body>
 </html>
