--- a/src/main/resources/templates/loginpage.html
+++ b/src/main/resources/templates/loginpage.html
@@ -25,8 +25,10 @@
 <form th:action="@{/createUser}" method="get">
     <button type="submit">Create User</button>
 </form>
-<h1>List of Users</h1>
-<h1>Delete a User</h1>
+<br>
+<br>
+
+<h2>If you want to delete a user:</h2>
 <form th:action="@{/deleteuser}" method="get" style="display:inline;">
     <label for="user_id">Select a user to delete:</label>
     <select name="userId" id="user_id" required>
